--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_auth: ^0.14.0+5
+  firebase_auth: ^0.15.4
   cloud_firestore: ^0.13.3
 
   # The following adds the Cupertino Icons font to your application.
